# gdi_games

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  games_factory.cpp  games_factory.h  main.cpp  main_window.cpp  main_window.h
src/engine/: abstract_game.h  base_game.cpp  base_game.h  game_object.cpp  game_object.h  games_manager.cpp  games_manager.h
src/engine/core/: action.h  actions_registry.h  async_periodic_timer.cpp  async_periodic_timer.h  err.cpp  err.h  mem_dc.cpp  mem_dc.h  noncopyable.h  os_primitives.h  primitives.h  time_processor.h
src/games/: game_1.cpp  game_1.h  game_2.cpp  game_2.h  game_3.cpp  game_3.h  game_4.cpp  game_4.h
src/games/utils/: circle_object.cpp  circle_object.h  cross_object.cpp  cross_object.h  movements.cpp  movements.h  rectangle_object.cpp  rectangle_object.h  triangle_object.cpp  triangle_object.h
